# moss

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  config.toml  moss.py  pyproject.toml  pytest.toml  requirements-test.txt  sample.config.txt  simpleoast.py  simpleoast_v0.py
docs/ext/: DEBUGGER.md  STEALTHNET.md
examples/: cve_2026_21967.py  example_extension.py  mock_opera_server.py  mock_rce_target.py  mock_xxe_server.py  rce_curl.py  xxe_exfil.py
ext/: auth.py  file.py  notify.py  pastebin.py  sfile.py  stealthnet.py  upload.py
ext/pastebin/: decrypt.html  pastebin.html
ext/stealthnet/: README.md  index.html  index.js
ext/stealthnet/profiles/: chunk100kb.json  chunk5kbget.json
moss/: moss.py
moss/ext/: auth.py  debugger.py  example.py  file.py  notify.py  pastebin.py  sfile.py  stealthnet.py  upload.py  websocket.html  websocket.py
moss/ext/debugger/: hook.json  recon.json
moss/ext/pastebin/: aes.js  decrypt.html  pastebin.html
moss/ext/stealthnet/: README.md
moss/ext/stealthnet/profiles/: chunk100kb.json  chunk5kbget.json  profile.json
tests/: conftest.py  test_anomalies.py  test_dos.py  test_error_handling.py  test_ext_auth.py  test_ext_debugger.py  test_ext_file.py  test_ext_notify.py  test_ext_pastebin.py  test_ext_stealthnet.py  test_ext_upload.py  test_ext_websocket.py  test_flags.py  test_http.py  test_http_methods.py  test_https.py  test_https_network.py  test_network.py  test_normal.py  test_oast.py  test_protocol.py  test_rate_limiting.py
tests/data/: server.crt  server.key
