[project]
name = "moss"
description = "A modular, multifunctional server for all your offensive security testing."
dynamic = ["version"]
keywords = ["oast", "dlp", "exfiltration", "honeypot", "offsec", "offensive security", "pentesting", "bug bounty", "red team"]
requires-python = ">= 3.10"
authors = [{name = "TrebledJ"}]
dependencies = []
license = { text = "MIT License" }
readme = "README.md"

[project.optional-dependencies]
all = ["jsonschema"]

[project.scripts]
moss = "moss.moss:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "moss.moss.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["moss*", "*.json"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.js", "*.json"]
